[tool.poetry]
name = "pyquac"
version = "1.5.0"
description = "Useful tools for working with heatmap live data"
authors = ["Nikolay Zhitkov"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
pandas = ">=1.3.5"
numba = ">=0.54.1"
kaleido = "0.1.0"
pillow = ">=9.1.0"
dash = ">=1.21.0"
jupyter-dash = ">=0.4.0"
PeakUtils = ">=1.3.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"
flake8 = "^4.0.1"
tox = "^3.25.0"
tox-gh-actions = "^2.9.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
